# ClaudeArcade

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  pty.rs  types.rs  watcher.rs
src-tauri/src/commands/: agents.rs  analytics.rs  claudemd.rs  detect.rs  equipment.rs  inventory.rs  mcp.rs  mod.rs  permissions.rs  project.rs  pty.rs  skills.rs
src-tauri/src/scanner/: claudemd.rs  hooks.rs  mod.rs  plugin.rs  settings.rs  skills.rs  slash_commands.rs  subagents.rs  weight.rs
src/components/agents/: AgentEditor.tsx  AgentManager.tsx  index.ts
src/components/analytics/: UsageDashboard.tsx
src/components/builds/: BuildManager.tsx  BuildSelector.tsx
src/components/character/: CharacterCard.tsx  CharacterPaperDoll.tsx  PixelSprite.tsx  WoWCharacterSheet.tsx
src/components/context/: ContextForecast.tsx
src/components/dashboard/: ContextImpactChart.tsx  ItemActivityCard.tsx  ItemActivityDashboard.tsx  index.ts
src/components/editor/: ClaudeMdEditor.tsx
src/components/equipment/: EquipmentOverview.tsx  EquipmentPanel.tsx  EquipmentSlot.tsx  SlotSelectionModal.tsx
src/data/: mcp-catalog.json
src/hooks/: useItemStatus.ts
src/services/: agentService.ts  github.ts
src/stores/: appStore.ts  buildStore.ts  personaStore.ts  projectRegistryStore.ts  projectStore.ts  terminalStore.ts  workflowStore.ts
src/types/: index.ts  mcp.ts  project.ts  workflow.ts
src/utils/: recommendations.ts
(+34 files in other folders)
