[package]
name = "claudearcade"
version = "0.1.0"
description = "RPG-style equipment manager for Claude Code"
authors = ["you"]
edition = "2021"

[lib]
name = "claudearcade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dirs = "5"
thiserror = "1"
notify = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
